[gd_scene load_steps=6 format=3 uid="uid://b7ml8im6w8hxc"]

[ext_resource type="Script" uid="uid://cahgv5y4tf2o6" path="res://DialogueBuilder/script/script_builder.gd" id="1_8nhxs"]
[ext_resource type="Texture2D" uid="uid://cr60r8rm80gw4" path="res://DialogueBuilder/asset/cross-hair.png" id="2_oydtx"]
[ext_resource type="Theme" uid="uid://j6l6bewon5v3" path="res://misc/main_theme.tres" id="2_xcg34"]
[ext_resource type="PackedScene" uid="uid://bumxlqpthva14" path="res://scene/menu_toolbar.tscn" id="4_oydtx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oydtx"]
bg_color = Color(0.00392157, 0.00784314, 0.00784314, 1)

[node name="ScriptBuilder" type="Node2D"]
script = ExtResource("1_8nhxs")

[node name="Parallax2D" type="Parallax2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Dialogues" type="Marker2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(164, 152)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(573, 322)

[node name="SpawnMarker" type="Marker2D" parent="Camera2D"]
unique_name_in_owner = true
position = Vector2(7, 7)

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_xcg34")

[node name="CenterContainer" type="CenterContainer" parent="UI/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="UI/UI/CenterContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_oydtx")

[node name="MarginContainer" type="MarginContainer" parent="UI/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="info" type="Control" parent="UI/UI/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_xcg34")

[node name="InfoContainer" type="ScrollContainer" parent="UI/UI/MarginContainer/info"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_right = 100.0
offset_bottom = 613.0
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="UI/UI/MarginContainer/info/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oydtx")

[node name="InfoLabel" type="Label" parent="UI/UI/MarginContainer/info/InfoContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap_mode = 3

[node name="MenuToolbar" parent="UI/UI" instance=ExtResource("4_oydtx")]
unique_name_in_owner = true
layout_mode = 1

[node name="AutoSaveTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 20.0
autostart = true

[connection signal="add_choice" from="UI/UI/MenuToolbar" to="." method="_on_add_choice_button_pressed"]
[connection signal="add_dialogue" from="UI/UI/MenuToolbar" to="." method="_on_add_dialogue_button_pressed"]
[connection signal="add_event" from="UI/UI/MenuToolbar" to="." method="_on_add_event_button_pressed"]
[connection signal="close_file" from="UI/UI/MenuToolbar" to="." method="close"]
[connection signal="exit" from="UI/UI/MenuToolbar" to="." method="exit_scene"]
[connection signal="load_file" from="UI/UI/MenuToolbar" to="." method="_on_load_script_button_pressed"]
[connection signal="save_file" from="UI/UI/MenuToolbar" to="." method="_on_save_script_button_pressed"]
[connection signal="save_file_as" from="UI/UI/MenuToolbar" to="." method="_on_menu_toolbar_save_file_as"]
[connection signal="toggle_degbug_info" from="UI/UI/MenuToolbar" to="." method="_on_hide_info_pressed"]
[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_auto_save_timer_timeout"]
